--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.16.0"
+    "mysql2": "^3.16.0",
+    "typescript": "^5.9.3",
+    "@types/node": "^25.0.3",
+    "@types/express": "^5.0.6",
+    "@types/cors": "^2.8.19"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "tsx": "^4.21.0"
   }
 }
